ChangeLog 'burst-clusterizer'

Structure

Date - user
	FEATURES: 	explanation of new features
	BUGFIX:   	explanation of bug solved
	CHANGES:  	explanation of codification changes

2010/03/19 - jgonzale
	CHANGES:    Only 'javac' is checked when looking for Java compilers
	BUGFIX:		Solved used of 'getenv' into the Dimemas GUI

2010/03/15 - jgonzale
	BUGFIX:		GUI is only compiled if Java Compiler is present. Previously it
				tried to compile it always.
	CHANGES:	Java m4 macros don't stop when no available compiler/VM/jar is
				found
	CHANGES:	Configure script no longer offers debug/optimization flags.
				User must provide this information using CFLAGS/CXXFLAGS.
	CHANGES:	Removed 'aclocal.m4' from the package distribution.

2010/03/10 - jgonzale
	CHANGES:	Minor changes on GUI

2010/03/09 - jgonzale
	CHANGES:	Completed changes to integrate the Java GUI into the main
				Dimemas packaging. See DimemasGUI directory
	CHANGES:	Added 'm4' directories to add automake macros

2010/03/03 - jgonzale
	BUGFIX:		Solved a small misuse when generating the distribution
				package
	CHANGES:	Minor cosmetic changes in 'README' file and elimination of
				very old configuration options

2010/02/15 - jgonzale
	CHANGES:	Cleaning to liberate Dimemas code

2009/10/14 - jgonzale
	BUGFIX:		Solved a bug in 'transferencia' function, which did not
				return the total transfer time correctly. Right now, resources
				time and transfer time are return using output parameters

2007/11/28 - jgonzale
	CHANGES:	The output binary is now called Dimemas3
	CHANGES:	Modifications in data access layer to use traces numbered in
				range 0..N-1
	BUGFIX:		Correct read in data access layer for 'rendez_vous' attribute

2007/11/05 - jgonzale
	CHANGES:    Added 'enable-idle-accounting' compilation option to not
				include the idle blocks on CPU consumption accounting

2007/10/29 - jgonzale
	CHANGES:	Incresed API buffer size, in order to correct simulate traces
				with big headers

2007/09/21 - jgonzale